2001-12-21  Max Horn  <max@quendi.de>

	* configure.in: fixed output at end of configure run to do what it is
	supposed to (e.g. print out the SDL version instead of "sdl-config --version").

2001-12-21  Ryan Nunn  <triforce@merlin.net.au>
	* combat.cc, drag.cc, conf/Configuration.* : Warnings and errors
	* audio/Audio.cc, msvcstuff/msvc_kludges.h : Added a config file option
	  for Windows "config/audio/force_waveout" that when set to "yes" will
	  force SDL to use waveout rather than attepting to use DirectSound.
	  Using this option may fix up problems some people have with sound in
	  Exult under Windows. Also now allow Win32 to be build with 44kHz
	  sound by defining FORCE_44KHZ when building. It should probably be
	  made into a config option.

2001-12-21  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc (Weather_effect): Turn off rain in gump mode.
	* objs/egg.cc: Another goof in is_active().

2001-12-20  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Fixed excessive monster spawning from
	testing wrong variable in is_active().

2001-12-19  Patrick Burke <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added fixes for cygwin compatibility.
	* conf/Configuration.h: Added a 'return' in the call to read_config_file
	that I missed.

2001-12-18  Patrick Burke <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added 'long' type handling for opcodes.txt.
	Optomised USECODE file reading to increase speed.

2001-12-17  Patrick Burke <takhisisii@yahoo.com.au>
	* conf/Configuration.[cc|h]: Updated from FILE *'s to fstreams.
	* usecode/ucxt/*: Updated to use U7open() rather then fstream.open().

2001-12-16  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Fiddling with combat formulae.  Combat skill counts
	for more, and 'level' is no longer used at all.

2001-12-16  Patrick Burke  <takhisisii@yahoo.com.au>
	* tools/Makefile.am, cmanip.cc: A simple command-line conf/ file
	editor. Added under no-install.
