@@ -31,7 +31,7 @@ static gint32 save_image (gchar  *filename,
 	    gint32  orig_image_ID);
 static GimpRunModeType run_mode;
 static guchar   gimp_cmap[768] = {
-0x00, 0x00, 0x04, 0xF8, 0xF0, 0xCC, 0xF4, 0xE4, 0xA4, 0xF0, 0xDC, 0x78, 
+0x00, 0x00, 0x00, 0xF8, 0xF0, 0xCC, 0xF4, 0xE4, 0xA4, 0xF0, 0xDC, 0x78, 
 0xEC, 0xD0, 0x50, 0xEC, 0xC8, 0x28, 0xD8, 0xAC, 0x20, 0xC4, 0x94, 0x18, 
 0xB0, 0x80, 0x10, 0x9C, 0x68, 0x0C, 0x88, 0x54, 0x08, 0x74, 0x44, 0x04, 
 0x60, 0x30, 0x00, 0x4C, 0x24, 0x00, 0x38, 0x14, 0x00, 0xF8, 0xFC, 0xFC, 
@@ -93,8 +93,8 @@ static guchar   gimp_cmap[768] = {
 0xFC, 0x50, 0x00, 0xC8, 0x38, 0x00, 0x98, 0x28, 0x00, 0x68, 0x18, 0x00, 
 0x7C, 0xDC, 0x7C, 0x44, 0xB4, 0x44, 0x18, 0x90, 0x18, 0x00, 0x6C, 0x00, 
 0xF8, 0xB8, 0xFC, 0xFC, 0x64, 0xEC, 0xFC, 0x00, 0xB4, 0xCC, 0x00, 0x70, 
-0xFC, 0xFC, 0xFC, 0xFC, 0xFC, 0x00, 0xFC, 0xD0, 0x00, 0xFC, 0xAC, 0x00, 
-0x00, 0x00, 0x00, 0x64, 0x3C, 0x10, 0xFC, 0xD0, 0x70, 0xFC, 0xFC, 0x04 };
+0xFC, 0xFC, 0x00, 0x00, 0x00, 0xFF, 0x00, 0xFC, 0x00, 0xFC, 0x00, 0x00, 
+0xFC, 0xFC, 0xFC, 0x61, 0x61, 0x61, 0xC0, 0xC0, 0xC0, 0xFC, 0x00, 0xF1 };
 
 GimpPlugInInfo PLUG_IN_INFO =
 {
